using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace zzz
{
    public class AnimationID 
    {
        public static readonly int HasInputID = Animator.StringToHash("HasInput");
        public static readonly int SpeedID = Animator.StringToHash("Speed");
        public static readonly int HorizontalID = Animator.StringToHash("Horizontal");
        public static readonly int VerticalID = Animator.StringToHash("Vertical");
    }
}
